# darksun

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  setup.py  tc.profile
analysis/: Untitled.ipynb  Untitled1.ipynb
analysis/scripts/: benchmark.py  c_vs_n.py  dneff.py  energy_ratio.py  entropy_ratio.py  sm_data.py  td_tsm_fo.py  thermal_cross_sections.py  utils.py  xifo.py  zero_temp_eta_cross_section.py
analysis/test/: Untitled.ipynb
apps/: CMakeLists.txt  bm.cpp  bm1.cpp  bm2.cpp  bm3.cpp  bm4.cpp  c.cpp  c_vs_n.cpp  c_vs_n1.cpp  c_vs_n2.cpp  generate_cs_data.cpp  lec1.cpp  lec2.cpp  mu_del.cpp  mu_eta.cpp  scan.cpp  thermal_cross_section.cpp  xi_inf.cpp
darksun/: CMakeLists.txt  __init__.py
darksun/include/darksun/: compute_xi.hpp  models.hpp  odeint.hpp  odeint_radau.hpp  standard_model.hpp  stepper.hpp  stepper_sie.hpp  thermodynamic_particle.hpp
darksun/src/: compute_xi.cpp  delta_neff.cpp  self_interaction_cross_sections.cpp  standard_model.cpp  thermal_cross_sections.cpp  thermodynamic_particle.cpp
darksun/tests/: CMakeLists.txt  test_compute_xi.cpp  test_models.cpp  test_odeint.cpp  test_standard_model.cpp  test_thermal_cross_sections.cpp  test_thermodynamic_particle.cpp
data/: CrossSectionFits.ipynb
include/darksun/: constants.hpp  darksun.hpp  phase_space.hpp  scanner.hpp  standard_model.hpp
include/darksun/model/: boltzmann.hpp  compute_xi.hpp  cross_sections.hpp  dneff.hpp  parameters.hpp  scaled_eta_cross_section.hpp  thermal_functions.hpp
include/darksun/phase_space/: base.hpp  four_momentum.hpp  rambo.hpp
include/darksun/stiff/: common.hpp  decomp.hpp  decsol.hpp  radau.hpp  radau5.hpp  radau_error_estimate.hpp  radau_solvers.hpp  vector_matrix.hpp
include/stiff/: common.hpp  dc_decsol.hpp  decsol.hpp  radau.hpp  stiff.hpp
rundata/: Untitled.ipynb  bm.csv  bm3.csv  bm_lec1=0.0_lec2=1.0.csv  bm_lec1=0.1_lec2=1.0.csv  bm_lec1=0.1_lec2=1.0_xi_inf=1e-1.csv  bm_lec1=0.1_lec2=1.0_xi_inf=5e-2.csv  bm_lec1=0.1_lec2=1_xi_inf=1e-2.csv  bm_lec1=0.1_lec2=1_xi_inf=5e-2.csv  bm_lec1=1.0_lec2=0.0.csv  bm_lec1=1_lec2=0_xi_inf=1e-2.csv  bm_lec1=1e-3_lec2=1_xi_inf=1e-2.csv  c=0.01.csv  c=0.1.csv  c=0.5.csv  c=1.5.csv  c_vs_n1.csv  c_vs_n2.csv  c_vs_n_lam=10.0.csv  c_vs_n_lam=1e-1.csv  c_vs_n_lam=1e-3.csv  c_vs_n_lam=1e-4_lec1=0.1_lec2=1.0.csv  c_vs_n_lam=1e-5.csv  c_vs_n_lam=1e-7.csv  lec1=0.01.csv  lec1=1.0.csv  lec2=0.01.csv  lec2=1.0.csv  mu_del=0.1.csv  mu_del=10.0.csv  mu_eta=0.1.csv  mu_eta=10.0.csv  relic_density.txt  relic_density2.txt  tc_data.csv  xi_inf=1.csv  xi_inf=1e-1.csv  xi_inf=1e-2.csv  xi_inf=1e-3.csv  xi_inf=1e-4.csv  (+4 more)
rundata/L1_scan/: L1_0_5.txt  L1_1_5.txt  scan1.par  scan2.par
rundata/c_scan/: c_0_5.txt  c_1_5.txt  scan1.par  scan2.par
rundata/cs_data/: log10_cs.csv
rundata/mu_delta_scan/: mu_delta_0_5.txt  mu_delta_1_5.txt  scan1.par  scan2.par
rundata/mu_eta_scan/: mu_eta_0_5.txt  mu_eta_1_5.txt  scan1.par  scan2.par
rundata/xi_inf_scan/: scan1.par  scan2.par  xi_inf_1e-1.txt  xi_inf_1e-3.txt
src/: brent.rs  generate_cs_data.rs  interp_utils.rs  lib.rs  model.rs  ode.rs  standard_model.rs
src/model/: cross_sections.rs  data.rs  thermal_functions.rs
src/ode/: boltz.rs  linalg.rs  radau5.rs
test/: test_decsol.cpp  test_eta_24_cross_section.cpp  test_model.cpp  test_radau.cpp  test_scanner.cpp
